<resources>
    <string name="app_name">Sho Peeng</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="moto">Πήγαινέ με μαγαζάκι!</string>
    <string name="logo">Background logo</string>
    <string name="search_button">Αναζήτηση</string>
    <string name="action_show_shopping_list">Η λίστα μου</string>
    <string name="action_go_to_search">Αναζήτηση</string>
    <string name="action_register_login">Εγγραφή/Σύνδεση</string>
    <string name="product_price">%1$s€</string>
    <string name="ordering_label">Ταξινόμηση</string>
    <string name="show_only_on_distance">Δείξε μονο όσα απέχουν</string>
    <string name="km_or_hour">Χιλιόμετρα / Ώρες</string>
    <string name="walking_or_driving">Οδηγώντας / Περπατώντας</string>
    <string name="stores_label">Καταστήματα</string>
    <string name="distance_check_box_label">Απόσταση</string>
    <string name="price_check_box_label">Τιμή</string>
    <string name="product_details_label">Πληροφορίες</string>
    <string name="product_name_label">Ονομα Προιόντος</string>
    <string name="show_directions_label">ΟΔΗΓΙΕΣ ΠΡΟΣΒΑΣΗΣ</string>
    <string name="users_comments_label">Σχόλια Χρηστών</string>
    <string name="store_name_label">Όνομα Καταστήματος</string>
    <string name="user_comments_label">Σχόλια Χρηστών</string>
    <string name="rating_score_label">Βαθμολογία</string>
    <string name="rating_score_value">Store Rating: %1$s ( %2$d )</string>
    <string name="add_to_shopping_list_description">Προσθήκη στη λίστα</string>
    <string name="store_address_text_view">Διεύθυνση</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="directions_button_label">Οδηγίες Πρόσβασης</string>
    <string name="add_review_label">Πρόσθεσε Κριτική</string>
    <string name="price_radio_button_label">Τιμή</string>
    <string name="distance_radio_button_label">Απόσταση</string>
    <string name="add_a_review_label">Βαθμολόγησε το Κατάστημα</string>
    <string name="leave_a_comment_label">Άφησε Ένα Σχόλιο</string>
    <string name="submit_button">Υποβολή</string>
    <string name="register_account_text_view">Δημιουργία Λογαριασμού</string>
    <string name="login_account_text_view">Σύνδεση Λογαριασμού</string>
    <string name="register_username_hint">Όνομα Χρήστη</string>
    <string name="login_username_hint">Όνομα Χρήστη</string>
    <string name="register_password_hint">Κωδικός</string>
    <string name="login_password_hint">Κωδικός</string>
    <string name="register_name_hint">Όνομα</string>
    <string name="register_surname_hint">Επίθετο</string>
    <string name="register_button">Εγγραφή</string>
    <string name="login_button">Σύνδεση</string>
    <string name="create_account_label">ΕΓΓΡΑΦΗ</string>
</resources>
