<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:applicationContext="gr.uoa.ec.shopeeng.MainActivity">
    <item android:id="@+id/action_register_login"
          android:title="@string/action_register_login"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_go_to_search"
          android:title="@string/action_go_to_search"
          android:orderInCategory="101"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="102"
          app:showAsAction="never"/>
    <item android:id="@+id/action_show_shopping_list"
          android:title="@string/action_show_shopping_list"
          android:orderInCategory="103"
          app:showAsAction="never"/>
</menu>
