<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:applicationContext=".fragments.AddReviewFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_a_review_label"
            android:id="@+id/addAReviewTextView"
            android:layout_marginStart="26dp" android:layout_marginTop="41dp" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_marginTop="40dp" android:layout_below="@+id/addAReviewTextView"
            android:layout_alignStart="@+id/addAReviewTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/leave_a_comment_label"
            android:id="@+id/leaveACommentTextView"
            android:layout_marginTop="63dp"
            android:layout_below="@+id/ratingBar" android:layout_alignStart="@+id/ratingBar"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/commentEditText" android:layout_below="@+id/leaveACommentTextView"
            android:layout_marginTop="31dp" android:layout_alignStart="@+id/leaveACommentTextView"
            android:layout_alignEnd="@+id/addAReviewTextView"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/submitButton" android:layout_below="@+id/commentEditText" android:layout_alignStart="@+id/commentEditText"
            android:layout_marginTop="42dp" android:backgroundTint="@color/abc_btn_colored_borderless_text_material"
            android:textColor="#ffffff"/>

</RelativeLayout>
