<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Ονομα Προιόντος"
                android:id="@+id/product_name_text_view"
                android:textAlignment="center"
                android:textSize="30dp"
                android:layout_marginTop="44dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Πληροφορίες"
                android:id="@+id/product_details_text_view"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ordering_label"
                android:id="@+id/ordering_text_view"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Τιμή"
                android:id="@+id/orderByPrice"
                android:checked="true"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Απόσταση"
                android:id="@+id/orderByDistance"
                android:checked="false"/>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Καταστήματα"
                android:id="@+id/stores_label"
                android:textIsSelectable="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/show_only_on_distance"
                android:id="@+id/show_only_on_distance_label"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/input_distance_text_edit"/>

        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walking_or_driving"
                android:id="@+id/switch1"
                android:checked="false"/>

        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_or_hour"
                android:id="@+id/switch2"
                android:checked="false"/>

        <ListView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:id="@+id/store_list"/>
    </LinearLayout>
</ScrollView>
