<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".fragments.SearchFragment">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" android:id="@+id/frameLayout">
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_logo"
        android:scaleType = "centerInside"
        android:contentDescription="@string/logo"
        android:src="@drawable/shopeeng_logo"/>
    </FrameLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:weightSum="1">
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ΕΓΓΡΑΦΗ"
                android:id="@+id/createAccountButton" android:layout_gravity="right"/>
        <TextView
                android:text="@string/moto"
                android:layout_width="162dp"
                android:layout_height="72dp" android:id="@+id/motoTextView"
                android:layout_gravity="center"/>
        <Space
                android:layout_width="314dp"
                android:layout_height="257dp"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_text" android:inputType="text" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_button"
                    android:id="@+id/search_button"
                    android:textColor="#ffffff"
                    android:backgroundTint="@color/abc_btn_colored_borderless_text_material"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
